/* Thirft message generated by ThriftLogGenerator */

namespace java com.pinterest.singer.thrift

include "loggingaudit.thrift"

struct ThriftMessage {
  // Sequence number of this thrift message in the sequence of log messages generated by a log
  // generator.
  1: required i64 sequenceNum;
  // Remaining payload
  2: binary payload;
  3: optional loggingaudit.LoggingAuditHeaders loggingAuditHeaders;
}


struct Event {
  // Note that we call this time instead of timestamp since timestamp is reserved in Hive.
  1: i64 time,
  2: i32 eventType,
  3: i64 userId, // the user performing the action
  4: i64 objectId, // can be a user, pin, board, comment
  5: optional loggingaudit.LoggingAuditHeaders loggingAuditHeaders
}